--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -1,4 +1,8 @@
----
+بیوگرافی 
+۲ _ اقتخارات 
+۳_ uدمات 
+۴ ■ درباره ا و شرکا
+ 
 sidebar_position: 0
 sidebar_class_name: hidden
 ---
@@ -8,7 +12,8 @@ sidebar_class_name: hidden
 **LangChain** is a framework for developing applications powered by large language models (LLMs).
 
 LangChain simplifies every stage of the LLM application lifecycle:
-- **Development**: Build your applications using LangChain's open-source [building blocks](/docs/concepts#langchain-expression-language-lcel), [components](/docs/concepts), and [third-party integrations](/docs/integrations/providers/).
+- **Development**: Build your applications using Lang
+Chain's حنک-source [building blocks](/docs/concepts#langchain-expression-language-lcel), [components](/docs/concepts), and [third-party integrations](/docs/integrations/providers/).
 Use [LangGraph](/docs/concepts/#langgraph) to build stateful agents with first-class streaming and human-in-the-loop support.
 - **Productionization**: Use [LangSmith](https://docs.smith.langchain.com/) to inspect, monitor and evaluate your chains, so that you can continuously optimize and deploy with confidence.
 - **Deployment**: Turn your LangGraph applications into production-ready APIs and Assistants with [LangGraph Cloud](https://langchain-ai.github.io/langgraph/cloud/).
